--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
         </div>
     </div>
 
-
+    <form class="form">
+        <div class="player1-info">
+            <input type="text" id="player1-name">
+            <input type="text" id="player1-symbol">
+        </div>
+        <div class="player2-info">
+            <input type="text" id="player2-name">
+            <input type="text" id="player2-symbol">
+        </div>
+        <button id="submit">Start Game</button>
+    </form>
 
 
     <script src="scripts.js"></script>
